--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -45,11 +45,18 @@ jobs:
 
     - name: Install Hysteria2
       run: |
-        HYSTERIA_VERSION="v2.6.1"  # 更新为最新版本
-        HYSTERIA_URL="https://github.com/apernet/hysteria/releases/download/app%2Fv${HYSTERIA_VERSION}/hysteria-linux-amd64"
+        HYSTERIA_URL="https://github.com/apernet/hysteria/releases/download/app%2Fv2.6.1/hysteria-linux-amd64"
         echo "正在下载 Hysteria2: ${HYSTERIA_URL}"
-        if ! sudo curl -fL -o /usr/local/bin/hysteria "${HYSTERIA_URL}"; then
-          echo "错误：无法下载 Hysteria2，请检查版本和链接。"
+        for i in {1..3}; do
+          if sudo curl -fL -o /usr/local/bin/hysteria "${HYSTERIA_URL}"; then
+            break
+          else
+            echo "尝试 $i 失败，5秒后重试..."
+            sleep 5
+          fi
+        done
+        if [ ! -f /usr/local/bin/hysteria ]; then
+          echo "错误：无法下载 Hysteria2，请检查链接。"
           exit 1
         fi
         sudo chmod +x /usr/local/bin/hysteria
@@ -57,8 +64,7 @@ jobs:
 
     - name: Install Xray-core
       run: |
-        XRAY_VERSION="v25.3.6"  # 最新版本
-        XRAY_URL="https://github.com/XTLS/Xray-core/releases/download/${XRAY_VERSION}/Xray-linux-64.zip"
+        XRAY_URL="https://github.com/XTLS/Xray-core/releases/download/v25.3.6/Xray-linux-64.zip"
         echo "正在下载 Xray-core: ${XRAY_URL}"
         for i in {1..3}; do
           if sudo curl -fL -o /tmp/xray.zip "${XRAY_URL}"; then
