--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   verified-check:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
+    timeout-minutes: 30  # 整个工作流最多运行 30 分钟
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -88,6 +88,7 @@ jobs:
         echo "Xray 版本: $(xray version || echo '版本检查失败')"
 
     - name: Run checker with verification
+      timeout-minutes: 20  # 限制 sub.py 运行时间为 20 分钟
       run: |
         # 强制生成初始文件
         echo "proxies: []" > nodes.yml
