--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,4 +1,4 @@
-name: Node Validator
+name: Node Speed Test
 
 on:
   schedule:
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # 需要完整历史记录才能提交更改
 
     - name: Install system tools
       run: |
@@ -20,7 +22,8 @@ jobs:
           curl \
           netcat-openbsd \
           python3 \
-          python3-pip
+          python3-pip \
+          jq  # 用于调试时检查文件
 
     - name: Setup Python
       uses: actions/setup-python@v4
@@ -28,17 +31,35 @@ jobs:
         python-version: '3.10'
 
     - name: Install dependencies
-      run: pip install pyyaml
+      run: |
+        pip install pyyaml
+        pip install speedtest-cli  # 确保speedtest依赖已安装
+
+    - name: Create output directory
+      run: mkdir -p output  # 确保输出目录存在
 
     - name: Run validation
       run: python3 sub.py
       env:
         DEBUG: 'true'
 
+    - name: Verify generated files
+      run: |
+        echo "=== 文件检查 ==="
+        ls -l output/
+        echo "speed.txt内容:"
+        cat output/speed.txt || echo "无speed.txt文件"
+        echo "nodes.yml内容:"
+        cat output/nodes.yml || echo "无nodes.yml文件"
+
     - name: Commit results
+      if: always()  # 即使前序步骤失败也尝试提交
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "自动更新节点列表"
+        commit_message: "自动更新节点列表和测速结果 [skip ci]"
         file_pattern: |
-          nodes.yml
-          speed.txt
+          output/nodes.yml
+          output/speed.txt
+        branch: main
+        commit_user_name: "GitHub Actions"
+        commit_user_email: "actions@github.com"
