--- a/.github/workflows/node-speed-test.yml
+++ b/.github/workflows/node-speed-test.yml
@@ -1,49 +1,47 @@
-name: Node Validator Pro
+name: Real Speed Test
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # 每6小时运行
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  validate:
+  test:
     runs-on: ubuntu-latest
-    timeout-minutes: 40
+    timeout-minutes: 50
     
     steps:
-    - name: 检出代码
+    - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: 安装基础依赖
+    - name: Install dependencies
       run: |
         sudo apt-get update
         sudo apt-get install -y \
           curl \
-          jq \
           python3 \
-          python3-pip \
-          v2ray-core  # 使用官方打包版本
-        
-    - name: 配置Python环境
+          python3-pip
+
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
         
-    - name: 安装Python依赖
+    - name: Install PyYAML
       run: pip install pyyaml
       
-    - name: 运行测试脚本
+    - name: Run speed test
       run: |
         chmod +x sub.py
         python3 sub.py
         
-    - name: 提交结果
+    - name: Commit results
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "自动更新优质节点列表 [skip ci]"
+        commit_message: "Auto-Update Nodes (Real Speed) [skip ci]"
         file_pattern: |
           output/nodes.yml
           output/speed.txt
